--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -10,12 +10,20 @@
          prefWidth="400.0"
          type="javafx.scene.layout.HBox"
          xmlns="http://javafx.com/javafx/17"
-         xmlns:fx="http://javafx.com/fxml/1">
+         xmlns:fx="http://javafx.com/fxml/1"
+         spacing="10">
     <children>
-        <Label fx:id="dialog" text="Label" wrapText="true" minHeight="-Infinity"/>
-        <ImageView fx:id="displayPicture" fitHeight="99.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true"/>
+        <ImageView fx:id="displayPicture"
+                   fitHeight="40.0" fitWidth="40.0"
+                   pickOnBounds="true" preserveRatio="true"/>
+        <Label fx:id="dialog"
+               text="Label"
+               wrapText="true"
+               maxWidth="300"
+               minHeight="-Infinity"/>
     </children>
     <padding>
-        <Insets top="15.0" right="5.0" bottom="15.0" left="5.0"/>
+        <Insets top="10.0" right="10.0" bottom="10.0" left="10.0"/>
     </padding>
 </fx:root>
+
